force-app/main/default/objects/Document_Checklist_Parser_Setting__mdt.object
<CustomObject>
    <description>Defines a find and replace parser list which can be used to replace values in a string with dynamic values from the database.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to control usable parser serttings</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Defines the field to be replaced. Should be in the format of Field__c</description>
        <inlineHelpText>Defines the field to be replaced. Should be in the format of Field__c</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>Enter in a field to be replaced with [] brackets around the field. Format should be [FIELD_NAME]</description>
        <inlineHelpText>Enter in a field to be replaced with [] brackets around the field. Format should be [FIELD_NAME]</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Defines the Object and Field which should be replaced as part of the query. Should be in the format of Object__c</description>
        <inlineHelpText>Defines the Object and Field which should be replaced as part of the query. Should be in the format of Object__c</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Checklist Parser Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Field__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Document Checklist Parser Settings</pluralLabel>
</CustomObject>